gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/vararg2.d
version https://git-lfs.github.com/spec/v1
oid sha256:697a97d9059df437d20927e07424613acbbe775ed7dddca67ee6873dfe5b4b38
size 777
